# routes/api.php
@@ -14,6 +14,11 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
+Route::middleware('auth:sanctum')->get('/auth/user', function (Request $request) {
     return $request->user();
 });
+
+
+Route::post('/auth/register', [\App\Http\Controllers\AuthController::class, 'createUser']);
+Route::post('/auth/login', [\App\Http\Controllers\AuthController::class, 'loginUser']);
+Route::post('/auth/token', [\App\Http\Controllers\AuthController::class, 'tokenUser']);
